<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CommandLines</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="commandPane">Type in the commands</string>
    <string name="run">Run</string>
    <string name="clear">Clear</string>
    <string name="figure">Action figure</string>
    <string name="mode_lose">You lost!</string>
    <string name="mode_win">You won!</string>
    <string name="player1_win">Player1 won!</string>
    <string name="player2_win">Player2 won!</string>
    <string name="restart_button">Restart Game</string>
    <string name="start">START</string>
    <string name="help">HELP</string>
    <string name="exit">EXIT</string>
    <string name="exit_button">Return to Menu</string>
    <string name="attackId">Attack</string>
    <string name="attackText">Attack the opponent in one of the directions UP/DOWN/LEFT/RIGHT\nattack({DIRECTION}, {TIMES});\ncost: 10</string>
    <string name="ok">OK</string>
    <string name="healId">Heal</string>
    <string name="healText">Heal your player = increase lost hit points\nheal({TIMES});\ncost: 10</string>
    <string name="defendId">Defend</string>
    <string name="defendText">Defend the agent from the enemy\ndefend();\ncost: 10</string>
    <string name="moveId">Move</string>
    <string name="moveText">Move the player in one of the directions UP/DOWN/LEFT/RIGHT\nmove({DIRECTION}, {TIMES});\ncost: 10</string>
    <string-array name="list_of_commands">
        <item >UP,</item>
        <item >DOWN,</item>
        <item >LEFT,</item>
        <item >RIGHT,</item>
        <item >move(</item>
        <item >heal(</item>
        <item >defend();</item>
        <item >attack(</item>
        <item >if(</item>
        <item >while(</item>
        <item >else</item>
        <item >else if (</item>
        <item >AP</item>
        <item >HP</item>
    </string-array>
    <string name="menu_menu">Go to main menu</string>
    <string name="menu_mission">Mission description</string>
    <string name="menu_resume">Resume</string>
    <string name="missionId">Mission description</string>
    <string name="level_1">Welcome to the first mission! MOVE towards the enemy and ATTACK to eliminate the opponent.</string>
    <string name="level_2">The enemy army is much stonger this time. Make sure you make the most out of your turn. If you are DEFENDing the enemy will cause you less harm.</string>
    <string name="level_3">Another encounter! Try HEALing your soldiers to balance out their strengths against their enemy. </string>
    <string name="level_4">IF you have enough hit points or action points perform the next move.</string>
    <string name="level_5">Repeat the action WHILE you have enough hit points or action points. </string>
    <string name="app_id">780169065509</string>
    <string name="logo">logo</string>
    <string name="SIGN_OUT">SIGN OUT</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="multi_desc">Try to defend the enemy army before they destroy yours!</string>    
</resources>
