<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_level_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:gravity="center"
    android:orientation="vertical" >

    <!-- sign-in button -->

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <!-- sign-out button -->

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/SIGN_OUT"
        android:textSize="20sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="20sp" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="20sp" />

</LinearLayout>