<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <uk.ac.reading.tq011338.commandlines.GameView
        android:id="@+id/gameArea"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="60" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/commandListLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30" >
        </RelativeLayout>

        <EditText
            android:id="@+id/commandView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:hint="@string/commandPane"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/clear_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/clear" />
            <Button
                android:id="@+id/run_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/run" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>